--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typechain": "typechain --target ethers-v6 --out-dir src/typing/contracts src/assets/abis/*.json",
+    "postinstall": "yarn typechain"
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.592.0",
@@ -31,13 +33,15 @@
     "lodash": "^4.17.21",
     "nestjs-pino": "^4.1.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typechain": "^8.3.2"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.5.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.5",
