--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier . --check",
+    "prettier:fix": "prettier . --write",
+    "format": "yarn lint:fix && yarn prettier:fix",
+    "format:check": "yarn lint && yarn prettier",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
