--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.592.0",
+    "@nestjs/bullmq": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -38,8 +39,10 @@
     "@sentry/profiling-node": "^8.16.0",
     "@sentry/tracing": "^7.114.0",
     "alchemy-sdk": "^3.3.1",
+    "bullmq": "^5.8.5",
     "config": "^3.3.11",
     "ethers": "^6.13.0",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.2.0",
