--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@sentry/cli": "^2.32.1",
     "@sentry/nestjs": "^8.16.0",
@@ -44,6 +45,7 @@
     "ethers": "^6.13.0",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
+    "mongoose": "^8.5.0",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.2.0",
     "reflect-metadata": "^0.2.0",
