--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typechain": "typechain --target ethers-v6 --out-dir src/typing/contracts src/assets/abis/*.json",
-    "postinstall": "yarn typechain",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org eco-qp --project ecoism-server ./dist && sentry-cli sourcemaps upload --org eco-qp --project ecoism-server ./dist"
+    "postinstall": "yarn typechain"
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.592.0",
@@ -34,11 +33,6 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
-    "@sentry/cli": "^2.32.1",
-    "@sentry/nestjs": "^8.16.0",
-    "@sentry/node": "^8.16.0",
-    "@sentry/profiling-node": "^8.16.0",
-    "@sentry/tracing": "^7.114.0",
     "alchemy-sdk": "^3.3.1",
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
