--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
     "ethers": "^6.13.0",
-    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.2.0",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typechain": "^8.3.2"
