--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "alchemy-sdk": "^3.3.1",
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
     "ethers": "^6.13.0",
-    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.2.0",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typechain": "^8.3.2"
