--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postinstall": "yarn typechain"
   },
   "dependencies": {
+    "@alchemy/aa-alchemy": "^3.19.0",
+    "@alchemy/aa-core": "^3.19.0",
     "@aws-sdk/client-secrets-manager": "^3.592.0",
     "@nestjs/bullmq": "^10.1.1",
     "@nestjs/common": "^10.0.0",
@@ -45,7 +47,8 @@
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typechain": "^8.3.2"
+    "typechain": "^8.3.2",
+    "viem": "^2.19.7"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.5.0",
