--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postinstall": "yarn typechain"
   },
   "dependencies": {
-    "@alchemy/aa-alchemy": "^3.19.0",
+    "@alchemy/aa-accounts": "^3.19.0",
     "@alchemy/aa-core": "^3.19.0",
     "@aws-sdk/client-secrets-manager": "^3.592.0",
     "@nestjs/bullmq": "^10.1.1",
@@ -48,7 +48,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typechain": "^8.3.2",
-    "viem": "^2.19.7"
+    "viem": "^2.19.8"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.5.0",
