--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "inlineSources": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   }
 }
