adding a prover module that checks that the expiry date of an intent is passed some proving minimum duration. static now but should come from the proving contracts adding date-fns lib

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "alchemy-sdk": "^3.3.1",
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
+    "date-fns": "^3.6.0",
     "ethers": "^6.13.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
