Adding health module adding permissions check adding redis check adding mongo check adding health npm libs

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@alchemy/aa-accounts": "^3.19.0",
     "@alchemy/aa-core": "^3.19.0",
     "@aws-sdk/client-secrets-manager": "^3.592.0",
+    "@liaoliaots/nestjs-redis-health": "^9.0.4",
     "@nestjs/bullmq": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -36,6 +37,7 @@
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/terminus": "^10.2.3",
     "alchemy-sdk": "^3.3.1",
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
