--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typechain": "typechain --target ethers-v6 --out-dir src/typing/contracts src/assets/abis/*.json",
-    "postinstall": "yarn typechain"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@alchemy/aa-core": "^3.19.0",
@@ -41,7 +39,6 @@
     "bullmq": "^5.8.5",
     "config": "^3.3.11",
     "date-fns": "^3.6.0",
-    "ethers": "^6.13.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
     "nestjs-pino": "^4.1.0",
@@ -49,7 +46,6 @@
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typechain": "^8.3.2",
     "viem": "^2.21.2"
   },
   "devDependencies": {
@@ -57,7 +53,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@typechain/ethers-v6": "^0.5.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.5",
