added both internet facing urls to nginx ingress. use solver-lb url need to look into solver.staging.bend.eco not working. this is a staging ONLY fix unless problem persists to higher env's

--- a/.github/kustomize/staging/ingress-patch.yaml
+++ b/.github/kustomize/staging/ingress-patch.yaml
@@ -18,6 +18,10 @@
   value: solver.staging.bend.eco
 
 - op: add
+  path: /spec/rules/0/host
+  value: solver-lb.staging.bend.eco
+
+- op: add
   path: /spec/rules/0/http/paths/0/backend/service/port
   value:
     number: 3000
@@ -26,3 +30,8 @@
   path: /spec/tls/0/hosts
   value:
     - solver.staging.bend.eco
+
+- op: add
+  path: /spec/tls/0/hosts
+  value:
+    - solver-lb.staging.bend.eco
