--- a/.github/kustomize/staging/ingress-patch.yaml
+++ b/.github/kustomize/staging/ingress-patch.yaml
@@ -15,7 +15,7 @@
 
 - op: add
   path: /spec/rules/0/host
-  value: solver.staging.bend.eco
+  value: solver-lb.staging.bend.eco
 
 - op: add
   path: /spec/rules/0/host
@@ -25,11 +25,6 @@
   path: /spec/rules/0/http/paths/0/backend/service/port
   value:
     number: 3000
-
-- op: add
-  path: /spec/tls/0/hosts
-  value:
-    - solver.staging.bend.eco
 
 - op: add
   path: /spec/tls/0/hosts
