--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
     "nestjs-pino": "^4.1.0",
+    "permissionless": "^0.2.11",
     "pino-http": "^10.2.0",
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "viem": "^2.21.2"
+    "viem": "^2.21.32"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.5.0",
