--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "table": "^6.8.2",
     "viem": "^2.21.32"
   },
   "devDependencies": {
