liquidity provider structure

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eco-foundation/routes": "^0.0.424-beta",
     "@launchdarkly/node-server-sdk": "^9.7.1",
     "@liaoliaots/nestjs-redis-health": "^9.0.4",
+    "@lifi/sdk": "^3.4.1",
     "@nestjs/bullmq": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
